<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:checkableBehavior="single"
        android:visible="true">
        <item
            android:id="@+id/pen"
            android:icon="@drawable/ic_pen"
            android:title="@string/pen" />
        <item
            android:id="@+id/arrow"
            android:icon="@drawable/ic_arrow"
            android:title="@string/arrow" />
        <item
            android:id="@+id/rectangle"
            android:icon="@drawable/ic_rectangle"
            android:title="@string/rectangle" />
        <item
            android:id="@+id/circle"
            android:icon="@drawable/ic_circle"
            android:title="@string/circle" />
    </group>

    <item
        android:id="@+id/colors"
        android:icon="@drawable/ic_color_palette"
        android:title="@string/colors"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/red"
                android:icon="@drawable/ic_red"
                android:title="@string/red" />
            <item
                android:id="@+id/green"
                android:icon="@drawable/ic_green"
                android:title="@string/green" />
            <item
                android:id="@+id/blue"
                android:icon="@drawable/ic_blue"
                android:title="@string/blue" />
            <item
                android:id="@+id/black"
                android:icon="@drawable/ic_black"
                android:title="@string/black" />
        </menu>
    </item>


</menu>